# dftd4

./: .codecov.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  .zenodo.json  AGENTS.md  CITATION.bib  CMakeLists.txt  README.md  doc-dftd4.md  ford.md  fpm.toml  index.html  meson.build  meson_options.txt  modules.json  requirements.txt  search.html
.github/workflows/: build-examples.yml  codeql.yml  docs.yml  fortran-build.yml  wheel.yml
app/: 03-properties.json  04-energy-d4-eeqbc.json  CMakeLists.txt  argument.f90  cli.f90  driver.f90  driver_run.f90  gradient.json  help.f90  main.f90  meson.build  pair-analysis.json  properties.json  tester.py
assets/: parameters.toml
assets/aur/: README.md
assets/ci/: build-env.yaml  python-env.yaml  wheel-req.txt
config/: CMakeLists.txt  install-mod.py  meson.build  template-config.cmake  template-targets.cmake  template.cmake
config/cmake/: Findcustom-blas.cmake  Findcustom-lapack.cmake  Finddftd4-blas.cmake  Findmctc-lib.cmake  Findmstore.cmake  Findmulticharge.cmake  dftd4-utils.cmake
doc/: conf.py  index.rst  requirements.txt
doc/_static/: references.bib
include/: dftd4.h  dftd_api.h  param_ref.f90  param_ref.inc
interface/: blas_gemv.html  d4_gemv.html  dispersion_interface.html  get_atomic_c6.html  get_covalent_rad.html  get_effective_charge.html  get_electronegativity.html  get_hardness.html  get_lattice_points.html  get_nref.html  get_polarizabilities.html  get_polarizibilities.html  get_r4r2_val.html  get_rational_damping.html  get_wfpair_val.html  new_d4_model.html  new_d4s_model.html  pairwise_dispersion_interface.html  set_refalpha_eeq.html  set_refalpha_eeqbc.html  set_refalpha_gfn2.html  set_refcn.html  set_refgw.html  set_refq_eeq.html  set_refq_eeqbc.html  set_refq_gfn2.html  weight_references.html
lists/: absint.html  files.html  modules.html  procedures.html  types.html
man/: dftd4.1.adoc
man1/: dftd4.1.txt
module/: class_molecule.html  class_param.html  class_results.html  class_set.html  class_wsc.html  dftd4.html  dftd4_api.html  dftd4_blas.html  dftd4_charge.html  dftd4_compat.html  dftd4_cutoff.html  dftd4_damping.html  dftd4_damping_atm.html  dftd4_damping_rational.html  dftd4_data.html  dftd4_data_covrad.html  dftd4_data_en.html  dftd4_data_hardness.html  dftd4_data_r4r2.html  dftd4_data_wfpair.html  dftd4_data_zeff.html  dftd4_disp.html  dftd4_model.html  dftd4_model_d4.html  dftd4_model_d4s.html  dftd4_model_type.html  dftd4_model_utils.html  dftd4_ncoord.html  dftd4_numdiff.html  dftd4_output.html  dftd4_param.html  dftd4_reference.html  dftd4_utils.html  dftd4_version.html  dfuncpar.html  dispersion_calculator.html  mctc_environment.html  pbc_tools.html
proc/: add_coordination_number_derivs.html  allocate.html  ascii_atomic_radii.html  ascii_atomic_references.html  ascii_damping_param.html  ascii_pairwise.html  ascii_results.html  ascii_system_properties.html  c_f_character.html  calculate_distances.html  check_error_api.html  custom_d4_model_api.html  custom_d4s_model_api.html  d4_calculation.html  d4_dgemv.html  d4_dgemv312.html  d4_dgemv321.html  d4_sgemv.html  d4_sgemv312.html  d4_sgemv321.html  d4par.html  delete_error_api.html  delete_model_api.html  delete_param_api.html  delete_structure_api.html  derf_count.html  dlat_to_cell.html  dlat_to_dvol.html  dlat_to_rlat.html  dzeta.html  erf_count.html  f_c_character.html  generate_wsc.html  get_atm_dispersion.html  get_atm_dispersion_derivs.html  get_atm_dispersion_energy.html  get_atomic_c6.html  get_atomic_c6~2.html  get_charges.html  get_coordination_number.html  (+104 more)
python/: README.md  README.rst  build.py  ffibuilder.py  meson.build  meson_options.txt  mesonpep517.toml  pyproject.toml  setup.cfg  setup.py
python/dftd4/: __init__.py  ase.py  calculators.py  data.py  interface.py  libdftd4.py  library.py  meson.build  parameters.py  pyscf.py  qcschema.py  references.json  test_ase.py  test_interface.py  test_libdftd4.py  test_library.py  test_parameters.py  test_pyscf.py  test_qcschema.py  utils.py
python/dftd4/test/: test_calculators.py  test_dftd4.py  test_interface.py
search/: search_database.json
source/: argparser.f90  c_api.f90  class_molecule.f90  class_param.f90  class_results.f90  class_set.f90  class_wsc.f90  coordination_number.f90  d4_api.f90  d4_calculation.f90  dftd4.f90  dfuncpar.f90  disp_output.f90  eeq_model.f90  error.f90  f_api.f90  geometry_reader.f90  mctc_constants.f90  mctc_econv.f90  mctc_environment.f90  mctc_global.f90  mctc_param.f90  mctc_readin.f90  mctc_strings.f90  mctc_systools.f90  mctc_timings.f90  meson.build  pbc.f90  pbc_tools.f90  printout.f90  program_dftd.f90  tests_dftd.f90
sourcefile/: api.f90.html  atm.f90.html  blas.f90.html  charge.f90.html  compat.f90.html  covrad.f90.html  cutoff.f90.html  d4.f90.html  d4s.f90.html  damping.f90.html  data.f90.html  dftd4.f90.html  disp.f90.html  en.f90.html  hardness.f90.html  model.f90.html  ncoord.f90.html  numdiff.f90.html  output.f90.html  param.f90.html  r4r2.f90.html  rational.f90.html  reference.f90.html  type.f90.html  utils.f90.html  utils.f90~2.html  version.f90.html  wfpair.f90.html  zeff.f90.html
src/: api.f90  atm.f90  charge.f90  compat.f90  cutoff.f90  d4.f90  d4s.f90  dftd4.f90  disp.f90  model.f90  numdiff.f90  param.f90  rational.f90  reference.f90  type.f90  utils.f90  version.f90  zeff.f90
subprojects/: .gitignore  CMakeLists.txt  mctc-lib.wrap  mstore.wrap  multicharge.wrap
test/: CMakeLists.txt  meson.build
tests/: assertion.f90  c_api_example.c  class_molecule.f90  class_wsc.f90  cpp_api_example.cpp  dftd4.f90  eeq_model.f90  geometry_reader.f90  meson.build  pbc_tests.f90  pbc_tools.f90  tests_dftd.f90
tipuesearch/: tipuesearch_content.js
type/: d4_model.html  d4s_model.html  damping_param.html  dftd_options.html  dftd_parameter.html  dftd_results.html  dispersion_model.html  enum_qmod.html  enum_ref.html  functional_group.html  mctc_logger.html  molecule.html  rational_damping_param.html  realspace_cutoff.html  vp_error.html  vp_model.html  vp_param.html  vp_structure.html  ws_cell.html
(+59 files in other folders)
